# Madgine

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  Jenkinsfile
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.rst  conf.py  gettingstarted.rst  plugins.rst  programming.rst
docs/core/: architecture.rst  core.rst  features.rst  gettingstarted.rst  meta.rst  modules.rst  serialize.md  threading.rst
docs/howtos/: build.rst
plugins/: CMakeLists.txt
plugins/app/api/: CMakeLists.txt
plugins/app/api/src/Madgine/: applib.h
plugins/audio/: CMakeLists.txt
plugins/audio/api/: CMakeLists.txt
plugins/audio/api/shared/: CMakeLists.txt
plugins/audio/api/shared/libvorbis-1.3.7/: CMakeLists.txt
plugins/audio/api/src/Madgine/: audioforward.h  audiolib.h
plugins/audio/oboe/: CMakeLists.txt
plugins/audio/oboe/shared/: CMakeLists.txt
plugins/audio/portaudio/: CMakeLists.txt
plugins/audio/portaudio/shared/: CMakeLists.txt
plugins/behavior/: CMakeLists.txt
plugins/behavior/api/: CMakeLists.txt
plugins/behavior/api/docs/: behaviors.rst
plugins/behavior/api/src/Madgine/: behavior.cpp  behavior.h  behaviorcollector.cpp  behaviorcollector.h  behaviorerror.cpp  behaviorforward.h  behaviorhandle.cpp  behaviorhandle.h  behaviorlist.cpp  behaviorreceiver.h  bindings.cpp  bindings.h  nativebehaviorcollector.cpp  nativebehaviorcollector.h  parametertuple.h
plugins/behavior/api/tools/Madgine_Tools/: behaviortool.cpp
plugins/behavior/handler/: CMakeLists.txt
plugins/behavior/handler/src/Madgine/: handler.cpp  handler.h  handlercollector.h  handlerforward.h  handlerlib.h  handlermanager.cpp  handlermanager.h
plugins/behavior/nodegraph/: CMakeLists.txt
plugins/behavior/nodegraph/data/: subgraph.ngp
plugins/behavior/nodegraph/docs/: nodegraph.rst
plugins/behavior/nodegraph/shared/: CMakeLists.txt
plugins/behavior/python3/: CMakeLists.txt
plugins/behavior/python3/shared/: CMakeLists.txt  Dockerfile  entrypoint.sh
plugins/behavior/python3/src/Python3/: python3compat.cpp  python3compat.h  python3debugger.cpp  python3env.cpp  python3env.h  python3fileloader.cpp  python3fileloader.h
plugins/behavior/ui/: CMakeLists.txt
plugins/behavior/ui/src/Madgine/: uiforward.h
plugins/client/api/: CMakeLists.txt
plugins/client/api/src/Madgine/: clientlib.h
plugins/client/api/tools/Madgine_Tools/: clienttoolslib.h
plugins/core/: CMakeLists.txt
plugins/core/app/docs/: app.rst
plugins/core/behavior/: CMakeLists.txt
plugins/core/behavior/src/Madgine/: behavior.cpp  behavior.h  behaviorcollector.h  behaviorerror.h  behaviorforward.h  behaviorhandle.cpp  behaviorhandle.h  behaviorlist.h  behaviorreceiver.cpp  behaviorreceiver.h  bindings.cpp  bindings.h  nativebehaviorcollector.cpp  nativebehaviorcollector.h  parametertuple.h
plugins/core/behavior/tools/Madgine_Tools/: behaviortool.cpp  behaviortool.h
plugins/core/client/: CMakeLists.txt
plugins/core/client/src/Madgine/: clientlib.h
plugins/core/debug/: CMakeLists.txt
plugins/core/debug/src/Madgine/: debugforward.h
plugins/core/debug/tools/Madgine_Tools/: debugtoolsforward.h
plugins/core/render/: CMakeLists.txt
plugins/core/render/src/Madgine/: renderlib.h
plugins/core/render/tools/Madgine_Tools/: interactivecamera.cpp  interactivecamera.h  rendertoolslib.h
plugins/core/resources/: CMakeLists.txt
plugins/core/resources/loaders/: CMakeLists.txt
plugins/core/resources/loaders/fontloader/: CMakeLists.txt
plugins/core/resources/loaders/textureloader/: CMakeLists.txt
plugins/core/resources/shared/: CMakeLists.txt
plugins/core/scene/data/: test.scene
plugins/core/scene/src/Madgine/: sceneforward.h
plugins/core/tools/: CMakeLists.txt
plugins/core/tools/docs/: logviewer.rst  pluginmanager.rst
plugins/core/tools/shared/: CMakeLists.txt
plugins/core/tools/shared/imgui/: imguiaddons.cpp  imguiaddons.h  valuetypepayload.h
plugins/core/tools/src/Madgine_Tools/: imguiicons.h
plugins/core/widgets/data/: widgetstestgraph.ngp
plugins/debug/api/: CMakeLists.txt
plugins/debug/api/src/Madgine/: debugforward.h
plugins/debug/api/tools/Madgine_Tools/: debugtoolslib.h
plugins/firstparty/mockup/: CMakeLists.txt
plugins/firstparty/mockup/src/Madgine/: mockupliblib.h
plugins/misc/: CMakeLists.txt
plugins/misc/scene/: CMakeLists.txt
plugins/misc/scene/data/: test.scene
plugins/misc/scene/docs/: scene.rst
plugins/misc/scene/renderer/Madgine/: scenerendererlib.h
plugins/misc/scene/renderer_tools/Madgine_Tools/: scenerenderertoolslib.h
plugins/misc/widgets/: CMakeLists.txt
plugins/misc/widgets/data/: test.widget  widgetstestgraph.ngp
plugins/misc/widgets/docs/: widgets.rst
plugins/misc/widgets/handler/Madgine/: widgethandlerlib.h
plugins/renderer/: CMakeLists.txt
plugins/renderer/api/: CMakeLists.txt
plugins/renderer/api/docs/: render.rst
plugins/renderer/api/shared/: CMakeLists.txt
plugins/renderer/directx12/: CMakeLists.txt
plugins/renderer/opengl/: CMakeLists.txt
plugins/renderer/vulkan/: CMakeLists.txt
plugins/resources/: CMakeLists.txt
plugins/resources/animationloader/: CMakeLists.txt
plugins/resources/api/: CMakeLists.txt
plugins/resources/api/shared/: CMakeLists.txt
plugins/resources/imageloader/: CMakeLists.txt
plugins/resources/meshloader/: CMakeLists.txt
plugins/resources/meshloader/Madgine/: meshloaderlib.h
plugins/resources/skeletonloader/: CMakeLists.txt
plugins/root/api/: CMakeLists.txt
plugins/root/api/docs/: root.rst
plugins/server/api/: CMakeLists.txt
plugins/tools/: CMakeLists.txt
plugins/tools/api/: CMakeLists.txt
plugins/tools/api/shared/: CMakeLists.txt
plugins/tools/templates/: CMakeLists.txt
plugins/tools/templates/shared/: CMakeLists.txt
plugins/tools/texteditor/: CMakeLists.txt
plugins/tools/texteditor/shared/: CMakeLists.txt
src/Interfaces/shared/: CMakeLists.txt
src/Madgine/curl/: CMakeLists.txt  curl.cpp  curl.h  curllib.h
src/Madgine/curl/curl-8.12.1/: CMakeLists.txt
src/Madgine/curl/shared/: CMakeLists.txt
util/: CMakeLists.txt
(+17236 files in other folders)
