
Project(Plugins)

include(Plugins)

add_subdirectory(tools)
add_subdirectory(root)
add_subdirectory(debug)
add_subdirectory(resources)
add_subdirectory(app)

add_subdirectory(server)
add_subdirectory(renderer)
add_subdirectory(client)
add_subdirectory(behavior)
add_subdirectory(misc)

add_subdirectory(audio)





